# ravendb-cpp-client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Raven.CppClient.sln  build-test-dockers.ps1  deploy.sh  dockerfile.linux  hello_world.cpp  install.sh  install_old.sh  run-linux-test-docker.ps1
Raven.CppClient/: AbstractDocumentQuery.cpp  AbstractDocumentQuery.h  AbstractGenericIndexCreationTask.cpp  AbstractGenericIndexCreationTask.h  AbstractIndexCreationTask.cpp  AbstractIndexCreationTask.h  AbstractIndexCreationTaskBase.cpp  AbstractIndexCreationTaskBase.h  AbstractJavaScriptIndexCreationTask.cpp  AbstractJavaScriptIndexCreationTask.h  AbstractMultiMapIndexCreationTask.cpp  AbstractMultiMapIndexCreationTask.h  AddDatabaseNodeOperation.cpp  AddDatabaseNodeOperation.h  AdvancedDocumentSessionOperations.h  AdvancedSessionExtentionBase.cpp  AdvancedSessionExtentionBase.h  AdvancedSessionOperations.cpp  AdvancedSessionOperations.h  AfterSaveChangesEventArgs.cpp  AfterSaveChangesEventArgs.h  AllTopologyNodesDownException.cpp  AllTopologyNodesDownException.h  AttachmentDetails.cpp  AttachmentDetails.h  AttachmentDoesNotExistException.cpp  AttachmentDoesNotExistException.h  AttachmentName.cpp  AttachmentName.h  AttachmentResult.cpp  AttachmentResult.h  AttachmentType.h  AuthenticationException.cpp  AuthenticationException.h  AuthorizationException.cpp  AuthorizationException.h  AutoSpatialMethodType.h  AutoSpatialOptions.h  BadRequestException.cpp  BadRequestException.h  (+682 more)
Raven.CppClient.Tests/: Address.h  AdvancedPatchingTest.cpp  AdvancedPatchingTests.cpp  AdvancedPatchingTestsOld.cpp  Arr.h  AttachmentsSessionTest.cpp  BasicDocumentCommandsTests.cpp  BasicDocumentsSessionTests.cpp  BasicDocumentsTest.cpp  BasicPatchTests.cpp  BasicQueryCommandTests.cpp  BasicQueryTests.cpp  BoundingBoxIndexTest.cpp  CMakeLists.txt  CachingOfDocumentInclude.cpp  CanGetBuildNumberTest.cpp  ClientConfigurationTest.cpp  CompactTest.cpp  Company.h  CompanyType.h  ConnectionDetailsHolder.cpp  ConnectionDetailsHolder.h  Contact.h  ContainsTest.cpp  CreateSampleDataOperation.cpp  CreateSampleDataOperation.h  CrudTest.cpp  CrudTests.cpp  DatabasesTest.cpp  DeleteByQueryTest.cpp  DeleteDocumentCommandTest.cpp  DeleteTest.cpp  DetectIndexTypeTest.cpp  DocumentCommandsTests.cpp  DocumentIdPropertyTest.cpp  Employee.h  EntityIdHelperUtil.h  ExistsTest.cpp  Family.h  FirstClassPatchTest.cpp  (+81 more)
Tryouts/: CMakeLists.txt  Tryouts.cpp  Tryouts.vcxproj  Tryouts.vcxproj.filters  resource.h  tryouts1.cpp  tryouts2.cpp
cmake/: vcpkg_config.cmake  xxHash.cmake  xxhash.cmake
linux_re_config/: secured_re.txt
win_re_config/: secured_re.txt
